--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,7 @@
 {
-  "framework": "nextjs",
-  "rootDirectory": "frontend"
+  "buildCommand": "npm install && npm run build",
+  "outputDirectory": "frontend/.next",
+  "installCommand": "npm install",
+  "framework": "nextjs"
 }
 
